Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84127

QQuickImageProvider crash if Rtti was disabled

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 6.0.0
    • 5.14.2
    • Quick: Other
    • None
    • Windows 10 MSVC 2019
    • Windows
    • 47ff10532ebd6c7b0cb62c46b0be3b3d7f6214b8 (qt/qtdeclarative/dev)

    Description

      If rtti was disabled Image Provider crash on provider's access for custom provider. It doesn't even have to be your own implementation for QQuickImageProvider, just use directly QQuickImageProvider for the crash to occur.

      Stack:

      1   _CxxUnregisterExceptionObject                                           VCRUNTIME140D                  0x7fffd40998d7 
      2   _RTDynamicCast                                                          VCRUNTIME140D                  0x7fffd409a463 
      3   qSharedPointerDynamicCast<QQuickImageProvider,QQmlImageProviderBase>    qsharedpointer_impl.h     932  0x7fff85576a28 
      4   QSharedPointer<QQmlImageProviderBase>::dynamicCast<QQuickImageProvider> qsharedpointer_impl.h     400  0x7fff85575fdd 
      5   createPixmapDataSync                                                    qquickpixmapcache.cpp     1300 0x7fff85571d55 
      6   QQuickPixmap::load                                                      qquickpixmapcache.cpp     1624 0x7fff8556a9f3 
      7   QQuickImageBase::load                                                   qquickimagebase.cpp       296  0x7fff858d8b75 
      8   QQuickImageBase::componentComplete                                      qquickimagebase.cpp       390  0x7fff858d8d5c 
      9   QQmlObjectCreator::finalize                                             qqmlobjectcreator.cpp     1413 0x7fff86538d2d 
      10  QQmlComponentPrivate::complete                                          qqmlcomponent.cpp         971  0x7fff864793fa 
      11  QQmlComponentPrivate::completeCreate                                    qqmlcomponent.cpp         1006 0x7fff864787e8 
      12  QQmlComponent::completeCreate                                           qqmlcomponent.cpp         998  0x7fff86476aa2 
      13  QQmlComponent::create                                                   qqmlcomponent.cpp         812  0x7fff864768ce 
      14  QQmlApplicationEnginePrivate::finishLoad                                qqmlapplicationengine.cpp 134  0x7fff865281d6 
      15  QQmlApplicationEnginePrivate::startLoad                                 qqmlapplicationengine.cpp 119  0x7fff86527b76 
      16  QQmlApplicationEngine::load                                             qqmlapplicationengine.cpp 264  0x7fff865272fd 
      17  main                                                                    main.cpp                  22   0x7ff72a0928fc 
      18  invoke_main                                                             exe_common.inl            79   0x7ff72a094239 
      19  __scrt_common_main_seh                                                  exe_common.inl            288  0x7ff72a09411e 
      20  __scrt_common_main                                                      exe_common.inl            331  0x7ff72a093fde 
      ... <More>                                                                                                                
      
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            permotion88 Karol Polak
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes